; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/crt/mbstring/extr_ismbc.c__ismbcprint.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/crt/mbstring/extr_ismbc.c__ismbcprint.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @_ismbcprint(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = call i64 @_MBHMASK(i32 %3)
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %9

6:                                                ; preds = %1
  %7 = load i32, i32* %2, align 4
  %8 = call i32 @_ismbclegal(i32 %7)
  br label %20

9:                                                ; preds = %1
  %10 = load i32, i32* %2, align 4
  %11 = call i64 @isprint(i32 %10)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %17, label %13

13:                                               ; preds = %9
  %14 = load i32, i32* %2, align 4
  %15 = call i64 @_ismbbkana(i32 %14)
  %16 = icmp ne i64 %15, 0
  br label %17

17:                                               ; preds = %13, %9
  %18 = phi i1 [ true, %9 ], [ %16, %13 ]
  %19 = zext i1 %18 to i32
  br label %20

20:                                               ; preds = %17, %6
  %21 = phi i32 [ %8, %6 ], [ %19, %17 ]
  ret i32 %21
}

declare dso_local i64 @_MBHMASK(i32) #1

declare dso_local i32 @_ismbclegal(i32) #1

declare dso_local i64 @isprint(i32) #1

declare dso_local i64 @_ismbbkana(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
